force-app/main/default/objects/TREX1__Booking__c/TREX1__Booking__c.object-meta.xml
<CustomObject>
    <description>Represents every time based booking in the system.</description>
    <label>Booking</label>
    <nameField>
        <displayFormat>BN-{00000}</displayFormat>
        <label>Booking Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bookings</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>