force-app/main/default/objects/TREX1__Booking__c/fields/ActivePermitID__c.field-meta.xml
<CustomField>
    <fullName>ActivePermitID__c</fullName>
    <formula>TREX1__Booking_Series__r.ActivePermitID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ActivePermitID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>