force-app/main/default/objects/TREX1__Booking__c/fields/Additional_Staff_Fee__c.field-meta.xml
<CustomField>
    <fullName>Additional_Staff_Fee__c</fullName>
    <description>The total rate for additional staff for this booking</description>
    <formula>IF( !ISBLANK( Number_of_Additional_Staff_Hours__c ),
  Number_of_Additional_Staff_Hours__c * Number_of_Additional_Staff__c * Additional_Staff_Hourly_Rate__c,
  0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The total rate for additional staff for this booking</inlineHelpText>
    <label>Additional Staff Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>