force-app/main/default/objects/TREX1__Booking__c/fields/Additional_Staff_Hourly_Rate__c.field-meta.xml
<CustomField>
    <fullName>Additional_Staff_Hourly_Rate__c</fullName>
    <description>The hourly rate per individual additional staff member</description>
    <inlineHelpText>The hourly rate per individual additional staff member</inlineHelpText>
    <label>Additional Staff Hourly Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>