force-app/main/default/objects/TREX1__Booking__c/fields/Additional_Staff_Title__c.field-meta.xml
<CustomField>
    <fullName>Additional_Staff_Title__c</fullName>
    <description>How to refer to these staff in public documents and pages</description>
    <inlineHelpText>How to refer to these staff in public documents and pages</inlineHelpText>
    <label>Additional Staff Title</label>
    <length>80</length>
    <type>Text</type>
</CustomField>