force-app/main/default/objects/TREX1__Booking__c/fields/Booking_Date__c.field-meta.xml
<CustomField>
    <fullName>Booking_Date__c</fullName>
    <formula>DATEVALUE( TREX1__Start_Time__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking Date</label>
    <type>Date</type>
</CustomField>