force-app/main/default/objects/TREX1__Booking__c/fields/Booking_Rate__c.field-meta.xml
<CustomField>
    <fullName>Booking_Rate__c</fullName>
    <description>The suggested rate for the booking, based on Rental Rates associated with this Facility</description>
    <inlineHelpText>The suggested rate for the booking, based on Rental Rates associated with this Facility</inlineHelpText>
    <label>Booking Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>