force-app/main/default/objects/TREX1__Booking__c/fields/Booking_Rate_Calculation_Mode__c.field-meta.xml
<CustomField>
    <fullName>Booking_Rate_Calculation_Mode__c</fullName>
    <defaultValue>&apos;Automatic&apos;</defaultValue>
    <description>If set to Automatic, rates and details will be automatically generated from Booking and Rental Rate information. Set to manual to override these values.</description>
    <inlineHelpText>If set to Automatic, rates and details will be automatically generated from Booking and Rental Rate information. Set to manual to override these values.</inlineHelpText>
    <label>Booking Rate Calculation Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Automatic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>