force-app/main/default/objects/TREX1__Booking__c/fields/Booking_Rate_Details__c.field-meta.xml
<CustomField>
    <fullName>Booking_Rate_Details__c</fullName>
    <description>A description of the charges that make up the Booking Rate</description>
    <inlineHelpText>A description of the charges that make up the Booking Rate</inlineHelpText>
    <label>Booking Rate Details</label>
    <type>TextArea</type>
</CustomField>