force-app/main/default/objects/TREX1__Booking__c/fields/Contact_Information__c.field-meta.xml
<CustomField>
    <fullName>Contact_Information__c</fullName>
    <description>The individual that should be contacted for questions regarding this booking</description>
    <inlineHelpText>The individual that should be contacted for questions regarding this booking</inlineHelpText>
    <label>Contact Information</label>
    <type>TextArea</type>
</CustomField>