force-app/main/default/objects/TREX1__Booking__c/fields/Course_Option_Code__c.field-meta.xml
<CustomField>
    <fullName>Course_Option_Code__c</fullName>
    <formula>TREX1__Course_Option__r.TREX1__Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course Option Code</label>
    <type>Text</type>
</CustomField>