force-app/main/default/objects/TREX1__Booking__c/fields/DayofWeek__c.field-meta.xml
<CustomField>
    <fullName>DayofWeek__c</fullName>
    <formula>CASE(
MOD( DATEVALUE(TREX1__Date_Stamp__c) - DATE( 1900, 1, 7 ), 7 ),
0, &quot;Sunday&quot;,
1, &quot;Monday&quot;,
2, &quot;Tuesday&quot;,
3, &quot;Wednesday&quot;,
4, &quot;Thursday&quot;,
5, &quot;Friday&quot;,
&quot;Saturday&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DayofWeek</label>
    <type>Text</type>
</CustomField>