force-app/main/default/objects/TREX1__Booking__c/fields/Exclude_From_Conflicts__c.field-meta.xml
<CustomField>
    <fullName>Exclude_From_Conflicts__c</fullName>
    <description>Indicates that either the course option or facility are set to exclude bookings from conflicts</description>
    <formula>IF( TREX1__Facility__r.Exclude_Booking_Conflicts__c ||  
    TREX1__Course_Option__r.Exclude_Booking_Conflicts__c ,
  TRUE,
  FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates that either the course option or facility are set to exclude bookings from conflicts</inlineHelpText>
    <label>Exclude From Conflicts</label>
    <type>Checkbox</type>
</CustomField>