force-app/main/default/objects/TREX1__Booking__c/fields/Housekeeping_Fee__c.field-meta.xml
<CustomField>
    <fullName>Housekeeping_Fee__c</fullName>
    <description>The total rate for housekeeping for this booking</description>
    <formula>IF( !ISBLANK( Number_of_Housekeeping_Hours__c ),
  Number_of_Housekeeping_Hours__c * Number_of_Housekeeping_Staff__c * Housekeeping_Hourly_Rate__c,
  0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The total rate for housekeeping for this booking</inlineHelpText>
    <label>Housekeeping Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>