force-app/main/default/objects/TREX1__Booking__c/fields/Housekeeping_Hourly_Rate__c.field-meta.xml
<CustomField>
    <fullName>Housekeeping_Hourly_Rate__c</fullName>
    <defaultValue>32</defaultValue>
    <description>The hourly rate per individual housekeeping staff member</description>
    <inlineHelpText>The hourly rate per individual housekeeping staff member</inlineHelpText>
    <label>Housekeeping Hourly Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>