force-app/main/default/objects/TREX1__Booking__c/fields/Housekeeping_Hourly_Rate_Number__c.field-meta.xml
<CustomField>
    <fullName>Housekeeping_Hourly_Rate_Number__c</fullName>
    <defaultValue>32</defaultValue>
    <description>Rec&apos;s booking interface can’t handle input for Currency fields. Can display default values, can’t allow user input. This field is used to collect input as a number during the booking process</description>
    <label>Housekeeping Hourly Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>