force-app/main/default/objects/TREX1__Booking__c/fields/Instructor_Fee__c.field-meta.xml
<CustomField>
    <fullName>Instructor_Fee__c</fullName>
    <description>The total rate for instructors for this booking</description>
    <formula>IF( !ISBLANK( Number_of_Instructor_Hours__c ),
  Number_of_Instructor_Hours__c * Number_of_Instructors__c * Instructor_Hourly_Rate__c,
  0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The total rate for instructors for this booking</inlineHelpText>
    <label>Instructor Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>