force-app/main/default/objects/TREX1__Booking__c/fields/Instructor_Hourly_Rate__c.field-meta.xml
<CustomField>
    <fullName>Instructor_Hourly_Rate__c</fullName>
    <defaultValue>42</defaultValue>
    <description>The hourly rate per individual instructor</description>
    <inlineHelpText>The hourly rate per individual instructor</inlineHelpText>
    <label>Instructor Hourly Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>