force-app/main/default/objects/TREX1__Booking__c/fields/Instructor_Hourly_Rate_Number__c.field-meta.xml
<CustomField>
    <fullName>Instructor_Hourly_Rate_Number__c</fullName>
    <defaultValue>50</defaultValue>
    <description>Rec&apos;s booking interface can’t handle input for Currency fields. Can display default values, does not support user input. This field is used to collect input as a number during the booking process</description>
    <label>Instructor Hourly Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>