force-app/main/default/objects/TREX1__Booking__c/fields/Number_of_Additional_Staff_Hours__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Additional_Staff_Hours__c</fullName>
    <description>The number of hours per additional staff member for this booking</description>
    <inlineHelpText>The number of hours per additional staff member for this booking</inlineHelpText>
    <label>Number of Additional Staff Hours</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>