force-app/main/default/objects/TREX1__Booking__c/fields/Number_of_Instructors__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Instructors__c</fullName>
    <description>The number of instructors for this booking</description>
    <inlineHelpText>The number of instructors for this booking</inlineHelpText>
    <label>Number of Instructors</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>