force-app/main/default/objects/TREX1__Booking__c/fields/Number_of_Security_Guards__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Security_Guards__c</fullName>
    <description>The number of security guards for this booking</description>
    <inlineHelpText>The number of security guards for this booking</inlineHelpText>
    <label>Number of Security Guards</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>