force-app/main/default/objects/TREX1__Booking__c/fields/Security_Fee__c.field-meta.xml
<CustomField>
    <fullName>Security_Fee__c</fullName>
    <description>The total rate for security guards for this booking</description>
    <formula>IF( !ISBLANK( Number_of_Security_Hours__c ),
  Number_of_Security_Hours__c * Number_of_Security_Guards__c * Security_Hourly_Rate__c ,
  0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The total rate for security guards for this booking</inlineHelpText>
    <label>Security Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>