force-app/main/default/objects/TREX1__Booking__c/fields/Security_Hourly_Rate__c.field-meta.xml
<CustomField>
    <fullName>Security_Hourly_Rate__c</fullName>
    <defaultValue>37</defaultValue>
    <description>The hourly rate per individual security guard</description>
    <inlineHelpText>The hourly rate per individual security guard</inlineHelpText>
    <label>Security Hourly Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>