force-app/main/default/objects/TREX1__Booking__c/fields/To_Be_Deleted__c.field-meta.xml
<CustomField>
    <fullName>To_Be_Deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that this booking should be removed from the system</description>
    <inlineHelpText>Indicates that this booking should be removed from the system</inlineHelpText>
    <label>To Be Deleted</label>
    <type>Checkbox</type>
</CustomField>