force-app/main/default/objects/TREX1__Booking__c/fields/Total_Staffing_Fee__c.field-meta.xml
<CustomField>
    <fullName>Total_Staffing_Fee__c</fullName>
    <description>Total staffing fees for this booking</description>
    <formula>Security_Fee__c + Housekeeping_Fee__c + Instructor_Fee__c + Additional_Staff_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total staffing fees for this booking</inlineHelpText>
    <label>Total Staffing Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>