force-app/main/default/objects/TREX1__Booking__c/fields/TREX1__Actual_Attendance__c.field-meta.xml
<CustomField>
    <fullName>TREX1__Actual_Attendance__c</fullName>
    <description>Final number of attendees for the booking.</description>
    <inlineHelpText>Final number of attendees for the booking.</inlineHelpText>
    <label>Actual Attendance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>