force-app/main/default/objects/TREX1__Booking__c/fields/TREX1__book_Function__c.field-meta.xml
<CustomField>
    <fullName>TREX1__book_Function__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This holds the ID of the function associated to this booking. Used in all automation. Set automatically if you populate the &apos;Set Function&apos; field.</description>
    <inlineHelpText>This holds the ID of the function associated to this booking. Used in all automation. Set automatically if you populate the &apos;Set Function&apos; field.</inlineHelpText>
    <label>Function</label>
    <referenceTo>TREX1__Function__c</referenceTo>
    <relationshipLabel>Function Bookings</relationshipLabel>
    <relationshipName>Function_Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>