force-app/main/default/objects/TREX1__Booking__c/fields/TREX1__Booking_Series__c.field-meta.xml
<CustomField>
    <fullName>TREX1__Booking_Series__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relates the booking to a booking series if that was the criteria used to generate the booking.</description>
    <inlineHelpText>Relates the booking to a booking series if that was the criteria used to generate the booking.</inlineHelpText>
    <label>Booking Series</label>
    <referenceTo>TREX1__Booking_Series__c</referenceTo>
    <relationshipLabel>Bookings</relationshipLabel>
    <relationshipName>Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>