force-app/main/default/objects/TREX1__Booking__c/fields/TREX1__Conflict_Ids__c.field-meta.xml
<CustomField>
    <fullName>TREX1__Conflict_Ids__c</fullName>
    <description>Holds the Ids of other bookings that conflicts with this one (comma separated format).</description>
    <label>Conflict Ids</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>