force-app/main/default/objects/TREX1__Booking__c/fields/TREX1__Conflict_Status__c.field-meta.xml
<CustomField>
    <fullName>TREX1__Conflict_Status__c</fullName>
    <description>Indicates if the booking is overlapping with other booking with the same time</description>
    <inlineHelpText>Indicates if the booking is overlapping with other booking with the same time</inlineHelpText>
    <label>Conflict Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Conflicts</fullName>
                <default>true</default>
                <label>No Conflicts</label>
            </value>
            <value>
                <fullName>Conflicted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>