force-app/main/default/objects/TREX1__Booking__c/fields/TREX1__Course_Option__c.field-meta.xml
<CustomField>
    <fullName>TREX1__Course_Option__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Current course option booked.</description>
    <inlineHelpText>Current course option booked.</inlineHelpText>
    <label>Course Option</label>
    <referenceTo>TREX1__Course_Option__c</referenceTo>
    <relationshipLabel>Bookings</relationshipLabel>
    <relationshipName>Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>