force-app/main/default/objects/TREX1__Booking__c/fields/TREX1__Date_Stamp__c.field-meta.xml
<CustomField>
    <fullName>TREX1__Date_Stamp__c</fullName>
    <description>The date that the booking starts in the local timezone in the yyyy-mm-dd format. This field is indexed to ensure that conflict queries are selective.</description>
    <externalId>true</externalId>
    <inlineHelpText>The date that the booking starts</inlineHelpText>
    <label>Date_Stamp</label>
    <length>10</length>
    <type>Text</type>
</CustomField>