force-app/main/default/objects/TREX1__Booking__c/fields/TREX1__Description__c.field-meta.xml
<CustomField>
    <fullName>TREX1__Description__c</fullName>
    <description>The description of what the booking is for.</description>
    <inlineHelpText>The description of what the booking is for.</inlineHelpText>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>