force-app/main/default/objects/TREX1__Booking__c/fields/TREX1__End_Time__c.field-meta.xml
<CustomField>
    <fullName>TREX1__End_Time__c</fullName>
    <description>The ending date and time of the booking.</description>
    <inlineHelpText>The ending date and time of the booking.</inlineHelpText>
    <label>End Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>