force-app/main/default/objects/TREX1__Booking__c/fields/TREX1__End_Time_Block__c.field-meta.xml
<CustomField>
    <fullName>TREX1__End_Time_Block__c</fullName>
    <description>The end time of a booking, including any tear down time</description>
    <formula>TREX1__End_Time__c + (IF(ISNULL(TREX1__Tear_Down_Time_Required__c), 0, TREX1__Tear_Down_Time_Required__c) / 1440)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Time Block</label>
    <type>DateTime</type>
</CustomField>