force-app/main/default/objects/TREX1__Booking__c/fields/TREX1__Equipment__c.field-meta.xml
<CustomField>
    <fullName>TREX1__Equipment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Referenced to the booked equipment.</description>
    <inlineHelpText>Referenced to the booked equipment.</inlineHelpText>
    <label>Equipment</label>
    <referenceTo>TREX1__Equipment__c</referenceTo>
    <relationshipLabel>Bookings</relationshipLabel>
    <relationshipName>Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>