force-app/main/default/objects/TREX1__Booking__c/fields/TREX1__Event_Name__c.field-meta.xml
<CustomField>
    <fullName>TREX1__Event_Name__c</fullName>
    <description>Name the venue</description>
    <inlineHelpText>Name the venue</inlineHelpText>
    <label>Event Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>