force-app/main/default/objects/TREX1__Booking__c/fields/TREX1__Expected_Attendance__c.field-meta.xml
<CustomField>
    <fullName>TREX1__Expected_Attendance__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Expected attendance for venue</description>
    <inlineHelpText>Expected attendance for venue</inlineHelpText>
    <label>Expected Attendance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>