force-app/main/default/objects/TREX1__Booking__c/fields/TREX1__External_Notes__c.field-meta.xml
<CustomField>
    <fullName>TREX1__External_Notes__c</fullName>
    <description>A long text field for putting in any external notes required for this booking. Special maintenance tasks, instructions for an instructor. NOTE: this field is meant to be shown to external customers.</description>
    <inlineHelpText>A long text field for putting in any external notes required for this booking. Special maintenance tasks, instructions for an instructor. NOTE: this field is meant to be shown to external customers.</inlineHelpText>
    <label>External Notes</label>
    <length>3500</length>
    <type>LongTextArea</type>
</CustomField>