force-app/main/default/objects/TREX1__Booking__c/fields/TREX1__Facility__c.field-meta.xml
<CustomField>
    <fullName>TREX1__Facility__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The facility this booking is for, if applicable.</description>
    <inlineHelpText>The facility this booking is for, if applicable.</inlineHelpText>
    <label>Facility</label>
    <referenceTo>TREX1__Facility__c</referenceTo>
    <relationshipLabel>Bookings</relationshipLabel>
    <relationshipName>Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>