force-app/main/default/objects/TREX1__Booking__c/fields/TREX1__Function_ID__c.field-meta.xml
<CustomField>
    <fullName>TREX1__Function_ID__c</fullName>
    <description>This holds the ID of the function associated to this booking. Used in all automation. Set automatically if you populate the &apos;Set Function&apos; field. This is used over the lookup to avoid record skew issues.</description>
    <externalId>true</externalId>
    <inlineHelpText>This holds the ID of the function associated to this booking. Used in all automation. Set automatically if you populate the &apos;Set Function&apos; field. This is used over the lookup to avoid record skew issues.</inlineHelpText>
    <label>Function Text ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>