force-app/main/default/objects/TREX1__Booking__c/fields/TREX1__Function_Name__c.field-meta.xml
<CustomField>
    <fullName>TREX1__Function_Name__c</fullName>
    <description>The name of the function of this booking. Populated automatically by the Set Function field. Do not attempt to overwrite.</description>
    <inlineHelpText>The name of the function of this booking. Populated automatically by the Set Function field. Do not attempt to overwrite.</inlineHelpText>
    <label>Current Function</label>
    <length>80</length>
    <type>Text</type>
</CustomField>