force-app/main/default/objects/TREX1__Booking__c/fields/TREX1__In_My_Primary_Location__c.field-meta.xml
<CustomField>
    <fullName>TREX1__In_My_Primary_Location__c</fullName>
    <description>Returns True if this Booking has the same Location as the User&apos;s Primary Location, stored in the Division field. Users without a primary location will also return true, so they can view all records.</description>
    <formula>IF(IsBlank($User.Division), TRUE,
TREX1__Facility__r.TREX1__Location__r.Name=$User.Division)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Returns True if this Booking has the same Location as the User&apos;s Primary Location, stored in the Division field. Users without a primary location will also return true, so they can view all records.</inlineHelpText>
    <label>In My Primary Location</label>
    <type>Checkbox</type>
</CustomField>