force-app/main/default/objects/TREX1__Booking__c/fields/TREX1__Legacy_Id__c.field-meta.xml
<CustomField>
    <fullName>TREX1__Legacy_Id__c</fullName>
    <label>Legacy Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>