force-app/main/default/objects/TREX1__Booking__c/fields/TREX1__Notes__c.field-meta.xml
<CustomField>
    <fullName>TREX1__Notes__c</fullName>
    <description>A long text field for putting in any internal notes required for this booking. Special maintenance tasks, instructions for an instructor.</description>
    <inlineHelpText>A long text field for putting in any internal notes required for this booking. Ex. Special maintenance tasks, instructions for an instructor.</inlineHelpText>
    <label>Internal Notes</label>
    <length>3500</length>
    <type>LongTextArea</type>
</CustomField>