force-app/main/default/objects/TREX1__Booking__c/fields/TREX1__Number_of_Equipment_Booked__c.field-meta.xml
<CustomField>
    <fullName>TREX1__Number_of_Equipment_Booked__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of equipment booked during this time slot.</description>
    <inlineHelpText>Number of equipment booked during this time slot.</inlineHelpText>
    <label>Number of Equipment Booked</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>