force-app/main/default/objects/TREX1__Booking__c/fields/TREX1__Originating_Rental_Contract__c.field-meta.xml
<CustomField>
    <fullName>TREX1__Originating_Rental_Contract__c</fullName>
    <description>Stores the rental contract where this booking was generated from if it was generated from the rental contract manager.</description>
    <externalId>true</externalId>
    <inlineHelpText>Stores the rental contract where this booking was generated from if it was generated from the rental contract manager.</inlineHelpText>
    <label>Originating Rental Contract Text ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>