force-app/main/default/objects/TREX1__Booking__c/fields/TREX1__Parent_Booking__c.field-meta.xml
<CustomField>
    <fullName>TREX1__Parent_Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Status values and time changes cascade to the setup and teardown bookings. The conflict feature does not directly reference setup and teardown bookings (to improve efficiency), instead it targets the parent and factors in the setup and teardown time field values.</description>
    <inlineHelpText>The booking that this setup or teardown time is reserved for.</inlineHelpText>
    <label>Setup Parent</label>
    <referenceTo>TREX1__Booking__c</referenceTo>
    <relationshipLabel>Setup and Teardown</relationshipLabel>
    <relationshipName>Child_Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>