force-app/main/default/objects/TREX1__Booking__c/fields/TREX1__Rental_Contract__c.field-meta.xml
<CustomField>
    <fullName>TREX1__Rental_Contract__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The rental contract this booking is associated to.</description>
    <inlineHelpText>The rental contract this booking is associated to.</inlineHelpText>
    <label>Rental Contract</label>
    <referenceTo>TREX1__Rental_Contract__c</referenceTo>
    <relationshipLabel>Bookings</relationshipLabel>
    <relationshipName>Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>