force-app/main/default/objects/TREX1__Booking__c/fields/TREX1__Role_ID__c.field-meta.xml
<CustomField>
    <fullName>TREX1__Role_ID__c</fullName>
    <description>Holds the ID of the role (of a staff member). This is populated when using the Set Role lookup via a trigger. This field is used in back-end processing.</description>
    <externalId>true</externalId>
    <inlineHelpText>Holds the ID of the role (of a staff member). This is populated when using the Set Role lookup via a trigger. This field is used in back-end processing.</inlineHelpText>
    <label>Role ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>